# visual-llm

./: .gitignore  LICENSE  README.md  SCHEMA.md  STYLE_GUIDE.md  index.html
capture/: CMakeLists.txt  README.md  contrast_mask.py  hf_prompts.py  make_mask.py  reap_gguf.py  reap_hf.py  visual-llm-capture.cpp
css/: style.css
js/: main.js  replay.js  synthetic.js  utils.js
js/styles/: abyss.js  aurora.js  blueprint.js  bonsai.js  circuit.js  city.js  delta.js  flow.js  galaxy.js  gravity.js  metro.js  rack.js  rose.js  synapse.js  tree.js  web.js
prompts/: README.md
prompts/anti-domain/: advice-00.md  advice-01.md  advice-02.md  advice-03.md  advice-04.md  advice-05.md  advice-06.md  advice-07.md  advice-08.md  advice-09.md  lang-00.md  lang-01.md  lang-02.md  lang-03.md  lang-04.md  lang-05.md  lang-06.md  lang-07.md  lang-08.md  lang-09.md  lang-10.md  lang-11.md  lang-12.md  lang-13.md  lang-14.md  prose-00.md  prose-01.md  prose-02.md  prose-03.md  prose-04.md  prose-05.md  prose-06.md  prose-07.md  prose-08.md  prose-09.md  world-00.md  world-01.md  world-02.md  world-03.md  world-04.md  (+20 more)
prompts/canvas-js/: ant-colony.md  aquarium.md  asteroid-miners.md  boids-murmuration.md  campfire.md  castle-siege.md  clockwork.md  crystal-cavern.md  deep-sea-vents.md  digital-rain.md  falling-sand.md  fireworks-festival.md  gauntlet-crawl.md  glider-factory.md  gravity-wells.md  harbor-tide.md  koi-pond.md  lightning-storm.md  marble-run.md  metro-growth.md  orbital-junk.md  paper-planes.md  pendulum-wave.md  pinball-perpetual.md  ragdoll-dojo.md  rain-window.md  (+10 more)
(+36 files in other folders)
